fixed overlap issue with popups and fridge items

--- a/fridgyThing/fridge/static/fridge/styles/layout.css
+++ b/fridgyThing/fridge/static/fridge/styles/layout.css
@@ -207,6 +207,7 @@ h1{
 	-moz-box-shadow: 10px 10px 107px -21px rgba(0,0,0,0.75);
 	box-shadow: 10px 10px 107px -21px rgba(0,0,0,0.75);
 	padding: 10px;
+	z-index: 1000;
 }
 #popupBackground{
 	display: none;
@@ -217,6 +218,7 @@ h1{
 	top: 0px;
 	background-color: black;
 	opacity: .4 ;
+	z-index: 900;
 }
 
 #addIng-group .centeredButton{
@@ -255,6 +257,7 @@ h1{
 	-moz-box-shadow: 10px 10px 107px -21px rgba(0,0,0,0.75);
 	box-shadow: 10px 10px 107px -21px rgba(0,0,0,0.75);
 	padding: 10px;
+	z-index: 1000;
 }
 
 #recipetitle {
